--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,25 +8,33 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body> 
     <!--Navigation Bar-->
     <nav class="navbar navbar-light bg-light d-flex">
       <div class="container">
         <div class="logo">
           <a class="navbar-brand" href="#">
             <%= fa_stacked_icon "camera inverse", base: "circle"%>
-            Instagram
+            Instagram 
           </a>
-        </div>
+        </div> 
         <div class="m-auto">
           <form class="form-inline search-form">
             <input class="form-control mr-sm-2" type="search" placeholder="@search" aria-label="Search">
-          </form>
-        </div>
+            </form> 
+        </div> 
         <div class="user-section">
           <a><i class="fa fa-compass"></i></a>
           <a><i class="fa fa-heart"></i></a>
-          <a><i class="fa fa-user"></i></a>
+         <% if user_signed_in? %>
+<a href="<%= user_path(current_user)%>">
+  <i class=”fa fa-user”></i>
+ </a>
+<% else %>
+  <a href="<%= new_user_session_path%>">
+    <i class="fa fa-sign-in"></i>
+  </a>
+<% end %>
         </div>
       </div>
     </nav>
