--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Instuigram</title>
+    <title>Instagram</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body> 
+  <body>
     <!--Navigation Bar-->
     <nav class="navbar navbar-light bg-light d-flex">
       <div class="container">
         <div class="logo">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="<%= root_path %>">
             <%= fa_stacked_icon "camera inverse", base: "circle"%>
-            Instagram 
+            Instagram
           </a>
-        </div> 
+        </div>
         <div class="m-auto">
-          <form class="form-inline search-form">
-            <input class="form-control mr-sm-2" type="search" placeholder="@search" aria-label="Search">
-            </form> 
-        </div> 
+          <%= form_with url: search_path, method: :get, local: true, class: 'form-inline search-form' do |form| %>
+            <%= form.text_field :query, value: params[:query], class: 'form-control mr-sm-2', placeholder: '#search' %>
+          <% end %>
+        </div>
         <div class="user-section">
           <a><i class="fa fa-compass"></i></a>
           <a><i class="fa fa-heart"></i></a>
-         <% if user_signed_in? %>
-<a href="<%= user_path(current_user)%>">
-  <i class=”fa fa-user”></i>
- </a>
-<% else %>
-  <a href="<%= new_user_session_path%>">
-    <i class="fa fa-sign-in"></i>
-  </a>
-<% end %>
+          <% if user_signed_in? %>
+            <a href="<%= user_path(current_user)%>">
+              <i class="fa fa-user"></i>
+            </a>
+          <% else %>
+            <a href="<%= new_user_session_path%>">
+              <i class="fa fa-sign-in"></i>
+            </a>
+          <% end %>
         </div>
       </div>
     </nav>
@@ -61,7 +61,7 @@
           <li>HASHTAGS</li>
           <li>LANGUAGE</li>
         </ul>
-        <p> © 2019 INSTAGRAM </p>
+        <p> © 2018 INSTAGRAM </p>
       </nav>
     </footer>
   </body>
