--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,39 +1,49 @@
-@import 'bootstrap';
-@import 'font-awesome';
-@import 'users';
-.container {
+@import "bootstrap";
+@import "font-awesome";
+@import "users";
+@import "posts";
+
+.container{
   max-width: 1000px;
 }
-.navbar {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.0975);
+
+.navbar{
+  border-bottom: 1px solid rgba(0,0,0,.0975);
 }
-.user-section {
-  a {
+.user-section{
+  a{
     padding-left: 15px;
   }
-  i.fa {
+  i.fa{
     font-size: 22px;
     color: #000000d4;
   }
 }
-.search-form {
-  input {
+.search-form{
+  input{
     font-size: 13px;
     text-align: center;
   }
 }
-.footer {
+.footer{
   font-size: 12px;
   padding-top: 30px;
-  ul {
+  ul{
     padding-left: 0;
-    > li {
+    > li{
       display: inline;
       padding-right: 15px;
       color: #003569;
     }
   }
-  p {
+  p{
     color: #999;
+  }
+}
+
+.search-page{
+  h1{
+    font-size: 24px;
+    padding: 25px 0 0 30px;
   }
 }
