--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,6 +7,7 @@
       <a class="nav-link" data-toggle="pill">Email and SMS</a>
       <a class="nav-link" data-toggle="pill">Manage Contacts</a>
       <a class="nav-link" data-toggle="pill">Privacy and Security</a>
+      <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: "nav-link" %>
     </div>
   </div>
   <div class="details tab-content">
@@ -14,11 +15,19 @@
       <%= form_with model: current_user, local: true, html: {class: "form-horizontal form-edit-user"} do |f| %>
         <div class="form-group row">
           <div class="col-sm-3 col-form-label">
-            <img class="avatar"  src="https://picsum.photos/100/100/?random">
+            <% if current_user.avatar.attached? %>
+              <%= image_tag current_user.avatar, class: 'avatar' %>
+            <%end %>
           </div>
           <div class="col-sm-9">
             <p class="username"><%=current_user.username %></p>
             <a class="change-photo" href="">Change Profile Photo</a>
+          </div>
+        </div>
+        <div class="form-group row">
+          <%= f.label :avatar, class: 'col-sm-3 col-form-label' %>
+          <div class="col-sm-9">
+            <%= f.file_field :avatar, class: 'form-control' %>
           </div>
         </div>
         <div class="form-group row">
