--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,24 +2,30 @@
   <div class="profile row">
     <div class="col-md-4 avatar">
       <div class="wrapper">
-        <img src="https://picsum.photos/100/100/?random">
+        <% if @user.avatar.attached? %>
+          <%= image_tag @user.avatar %>
+        <%end %>
       </div>
     </div>
     <div class="col-md-8 basic-info">
       <div class="user-wrapper">
-        <h2 class="username"><%= current_user.username %></h2>
-        <a class="edit-profile" href="<%= edit_user_path(current_user) %>">
-          <button>Edit Profile</button>
-        </a> </div>
+        <h2 class="username"><%= @user.username %></h2>
+        <% if @user == current_user %>
+          <a class="edit-profile" href="<%= edit_user_path(@user) %>">
+            <button>Edit Profile</button>
+          </a>
+        <% end %>
+      </div>
       <ul class="posts">
-        <li><span>12</span> posts</li>
+        <li><span><%= @posts.count %></span> posts</li>
         <li><span>195</span> followers</li>
         <li><span>345</span> following</li>
       </ul>
-      <h2 class="name">Luan Nguyen</h2>
-      <a class="website">luanotes.com</a>
+      <h2 class="name"><%=@user.name %></h2>
+      <%=link_to @user.website, @user.website, class: 'website' %>
     </div>
   </div>
+
   <div class="user-tabs">
     <a class="tab active" href="">
       <i class="fa fa-th"></i>
@@ -38,15 +44,14 @@
       TAGGED
     </a>
   </div>
+
   <div class="user-images">
-    <div class="wrapper">
-      <img src="https://picsum.photos/200/200/?random">
-    </div>
-    <div class="wrapper">
-      <img src="https://picsum.photos/400/400/?random">
-    </div>
-    <div class="wrapper">
-      <img src="https://picsum.photos/300/300?random">
-    </div>
+    <% @posts.each do |post|%>
+      <div class="wrapper">
+        <%=link_to post_path(post) do %>
+          <%=image_tag post.image %>
+        <% end %>
+      </div>
+    <% end %>
   </div>
 </div>
